--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 msgpack==1.0.2
 packaging==20.9
+pre-commit==2.11.1
 proto-plus==1.18.0
 protobuf==3.15.6
 psycopg2==2.8.6
