--- a/bubbling_template/settings/.env.template
+++ b/bubbling_template/settings/.env.template
@@ -6,7 +6,7 @@ EMAIL=admin@${DOMAIN}.com
 DEBUG=${DEBUG:-False}
 SECRET_KEY=iamsecret
 
-DATABASE_NAME=common
+DATABASE_NAME=bubbling_template
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=127.0.0.1
