--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.0.3
 Django==3.1.7
+dj-database-url==0.5.0
 django-cors-headers==3.7.0
 django-dotenv==1.4.2
 django-split-settings==1.0.1
